--- a/preliminary analysis.ipynb
+++ b/preliminary analysis.ipynb
@@ -424,7 +424,7 @@
     }
    ],
    "source": [
-    "# Next we will evaluate the feature importance of the XGBoost model (This is not a\n",
+    "# Next we will evaluate the feature importance of the XGBoost model.\n",
     "def evaluate_feature_importance(df_evaluate_feature_importance, md):\n",
     "    feature_importance_average = [np.mean(i) for i in zip(*[md.get(model).feature_importances_ for model in md])]\n",
     "    df_feature_importance = pd.DataFrame()\n",
