Changed the comment and removed old comment that describes the API calling to the REST server

--- a/preliminary analysis.ipynb
+++ b/preliminary analysis.ipynb
@@ -36,8 +36,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-04T06:46:31.918081Z",
-     "end_time": "2023-04-04T06:46:32.801979Z"
+     "start_time": "2023-04-04T19:20:43.924579Z",
+     "end_time": "2023-04-04T19:20:45.284556Z"
     }
    }
   },
@@ -47,8 +47,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-04T06:46:32.804563Z",
-     "end_time": "2023-04-04T06:46:32.808309Z"
+     "start_time": "2023-04-04T19:20:45.287230Z",
+     "end_time": "2023-04-04T19:20:45.296120Z"
     }
    },
    "outputs": [],
@@ -62,8 +62,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-04T06:46:32.810414Z",
-     "end_time": "2023-04-04T06:46:32.849780Z"
+     "start_time": "2023-04-04T19:20:45.292852Z",
+     "end_time": "2023-04-04T19:20:45.344225Z"
     }
    },
    "outputs": [],
@@ -77,8 +77,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-04T06:46:32.852807Z",
-     "end_time": "2023-04-04T06:46:32.856064Z"
+     "start_time": "2023-04-04T19:20:45.336407Z",
+     "end_time": "2023-04-04T19:20:45.344378Z"
     }
    },
    "outputs": [],
@@ -102,8 +102,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-04T06:46:32.863075Z",
-     "end_time": "2023-04-04T06:46:32.867533Z"
+     "start_time": "2023-04-04T19:20:45.347728Z",
+     "end_time": "2023-04-04T19:20:45.352978Z"
     }
    },
    "outputs": [
@@ -126,8 +126,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-04T06:46:32.888056Z",
-     "end_time": "2023-04-04T06:46:32.914879Z"
+     "start_time": "2023-04-04T19:20:45.358612Z",
+     "end_time": "2023-04-04T19:20:45.398536Z"
     }
    },
    "outputs": [
@@ -167,8 +167,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-04T06:46:32.916715Z",
-     "end_time": "2023-04-04T06:46:32.921008Z"
+     "start_time": "2023-04-04T19:20:45.398638Z",
+     "end_time": "2023-04-04T19:20:45.422230Z"
     }
    }
   },
@@ -195,8 +195,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-04T06:46:32.949362Z",
-     "end_time": "2023-04-04T06:46:33.026489Z"
+     "start_time": "2023-04-04T19:20:45.408738Z",
+     "end_time": "2023-04-04T19:20:45.504448Z"
     }
    }
   },
@@ -215,8 +215,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-04T06:46:32.964079Z",
-     "end_time": "2023-04-04T06:46:33.077048Z"
+     "start_time": "2023-04-04T19:20:45.448409Z",
+     "end_time": "2023-04-04T19:20:45.526701Z"
     }
    },
    "outputs": [
@@ -254,8 +254,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-04T06:46:33.058453Z",
-     "end_time": "2023-04-04T06:46:33.121926Z"
+     "start_time": "2023-04-04T19:20:45.525696Z",
+     "end_time": "2023-04-04T19:20:45.685050Z"
     }
    },
    "outputs": [
@@ -292,8 +292,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-04T06:46:33.088118Z",
-     "end_time": "2023-04-04T06:46:34.997538Z"
+     "start_time": "2023-04-04T19:20:45.555455Z",
+     "end_time": "2023-04-04T19:20:47.763106Z"
     }
    },
    "outputs": [],
@@ -348,8 +348,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-04T06:46:34.984211Z",
-     "end_time": "2023-04-04T06:46:34.998601Z"
+     "start_time": "2023-04-04T19:20:47.753367Z",
+     "end_time": "2023-04-04T19:20:47.763454Z"
     }
    },
    "outputs": [
@@ -437,8 +437,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-04T06:46:34.984302Z",
-     "end_time": "2023-04-04T06:46:34.998869Z"
+     "start_time": "2023-04-04T19:20:47.761081Z",
+     "end_time": "2023-04-04T19:20:47.808234Z"
     }
    }
   },
@@ -484,8 +484,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-04T06:46:35.008199Z",
-     "end_time": "2023-04-04T06:46:35.050371Z"
+     "start_time": "2023-04-04T19:20:47.785210Z",
+     "end_time": "2023-04-04T19:20:47.859956Z"
     }
    }
   },
@@ -503,8 +503,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-04T06:46:35.034506Z",
-     "end_time": "2023-04-04T06:46:35.050566Z"
+     "start_time": "2023-04-04T19:20:47.814079Z",
+     "end_time": "2023-04-04T19:20:47.896806Z"
     }
    }
   },
@@ -516,7 +516,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 11010/11010 [00:00<00:00, 18977.88it/s]\n"
+      "100%|██████████| 11010/11010 [00:01<00:00, 5581.95it/s]\n"
      ]
     }
    ],
@@ -548,8 +548,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-04T06:46:35.046740Z",
-     "end_time": "2023-04-04T06:46:35.651688Z"
+     "start_time": "2023-04-04T19:20:47.824892Z",
+     "end_time": "2023-04-04T19:20:49.826318Z"
     }
    }
   },
@@ -572,8 +572,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-04T06:46:35.653643Z",
-     "end_time": "2023-04-04T06:46:35.658005Z"
+     "start_time": "2023-04-04T19:20:49.830208Z",
+     "end_time": "2023-04-04T19:20:49.834230Z"
     }
    }
   },
@@ -602,8 +602,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-04T06:46:35.662521Z",
-     "end_time": "2023-04-04T06:46:39.403008Z"
+     "start_time": "2023-04-04T19:20:49.873939Z",
+     "end_time": "2023-04-04T19:20:53.614967Z"
     }
    }
   },
@@ -629,8 +629,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-04T06:46:39.403546Z",
-     "end_time": "2023-04-04T06:46:39.435093Z"
+     "start_time": "2023-04-04T19:20:53.615086Z",
+     "end_time": "2023-04-04T19:20:53.679289Z"
     }
    }
   },
@@ -687,8 +687,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-04T06:46:39.436714Z",
-     "end_time": "2023-04-04T06:46:41.768247Z"
+     "start_time": "2023-04-04T19:20:53.674116Z",
+     "end_time": "2023-04-04T19:20:56.163671Z"
     }
    }
   },
@@ -735,8 +735,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-04T06:46:41.769086Z",
-     "end_time": "2023-04-04T06:46:41.776993Z"
+     "start_time": "2023-04-04T19:20:56.160777Z",
+     "end_time": "2023-04-04T19:20:56.181089Z"
     }
    }
   },
@@ -783,8 +783,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-04T06:46:41.777973Z",
-     "end_time": "2023-04-04T06:46:41.787537Z"
+     "start_time": "2023-04-04T19:20:56.166985Z",
+     "end_time": "2023-04-04T19:20:56.181358Z"
     }
    }
   },
@@ -800,11 +800,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-04T19:20:56.176953Z",
+     "end_time": "2023-04-04T19:20:56.181428Z"
+    }
    }
   }
  ],
